/** @generated AUTO-GENERATED FILE - safe to overwrite */
import * as React from 'react';
import { screen, waitFor } from '@testing-library/react';
import userEvent from '@testing-library/user-event';
import { renderWithProviders } from '../../../test-utils/renderWithProviders';
import { Spinner, LoadingOverlay, LoadingPlaceholder } from '../Spinner';

describe('Spinner', () => {
  // TODO: Add required props
  const defaultProps = {};

  // ============ Rendering ============
  describe('Rendering', () => {
    it('renders without crashing', () => {
      renderWithProviders(<Spinner {...defaultProps} />);
    });

    it('renders with default props', () => {
      const { container } = renderWithProviders(<Spinner {...defaultProps} />);
      expect(container.firstChild).toBeInTheDocument();
    });
  });

  // ============ Snapshot ============
  describe('Snapshot', () => {
    it('matches snapshot', () => {
      const { container } = renderWithProviders(<Spinner {...defaultProps} />);
      expect(container.firstChild).toMatchSnapshot();
    });
  });

  // ============ Props ============
  describe('Props', () => {
    it('applies custom className', () => {
      // TODO: Implement if component accepts className prop
      expect(true).toBe(true);
    });

    it('handles optional props correctly', () => {
      // TODO: Test optional prop combinations
      expect(true).toBe(true);
    });
  });

  // ============ User Interactions ============
  describe('User Interactions', () => {
    it('handles click events', async () => {
      const user = userEvent.setup();
      renderWithProviders(<Spinner {...defaultProps} />);

      // TODO: Add click interaction tests
      // Example:
      // const button = screen.getByRole("button");
      // await user.click(button);
      // expect(mockHandler).toHaveBeenCalled();
    });

    it('handles input changes', async () => {
      const user = userEvent.setup();
      renderWithProviders(<Spinner {...defaultProps} />);

      // TODO: Add input interaction tests
      // Example:
      // const input = screen.getByRole("textbox");
      // await user.type(input, "test");
      // expect(input).toHaveValue("test");
    });
  });

  // ============ Accessibility ============
  describe('Accessibility', () => {
    it('has no accessibility violations', async () => {
      // TODO: Add axe-core tests if available
      // const { container } = renderWithProviders(<Spinner {...defaultProps} />);
      // const results = await axe(container);
      // expect(results).toHaveNoViolations();
      expect(true).toBe(true);
    });

    it('has proper ARIA attributes', () => {
      renderWithProviders(<Spinner {...defaultProps} />);

      // TODO: Check for proper ARIA labels
      // Example:
      // expect(screen.getByRole("button")).toHaveAttribute("aria-label");
    });

    it('is keyboard navigable', async () => {
      const user = userEvent.setup();
      renderWithProviders(<Spinner {...defaultProps} />);

      // TODO: Test keyboard navigation
      // Example:
      // await user.tab();
      // expect(screen.getByRole("button")).toHaveFocus();
    });
  });
});

describe('LoadingOverlay', () => {
  // TODO: Add required props
  const defaultProps = {};

  // ============ Rendering ============
  describe('Rendering', () => {
    it('renders without crashing', () => {
      renderWithProviders(<LoadingOverlay {...defaultProps} />);
    });

    it('renders with default props', () => {
      const { container } = renderWithProviders(<LoadingOverlay {...defaultProps} />);
      expect(container.firstChild).toBeInTheDocument();
    });
  });

  // ============ Snapshot ============
  describe('Snapshot', () => {
    it('matches snapshot', () => {
      const { container } = renderWithProviders(<LoadingOverlay {...defaultProps} />);
      expect(container.firstChild).toMatchSnapshot();
    });
  });

  // ============ Props ============
  describe('Props', () => {
    it('applies custom className', () => {
      // TODO: Implement if component accepts className prop
      expect(true).toBe(true);
    });

    it('handles optional props correctly', () => {
      // TODO: Test optional prop combinations
      expect(true).toBe(true);
    });
  });

  // ============ User Interactions ============
  describe('User Interactions', () => {
    it('handles click events', async () => {
      const user = userEvent.setup();
      renderWithProviders(<LoadingOverlay {...defaultProps} />);

      // TODO: Add click interaction tests
      // Example:
      // const button = screen.getByRole("button");
      // await user.click(button);
      // expect(mockHandler).toHaveBeenCalled();
    });

    it('handles input changes', async () => {
      const user = userEvent.setup();
      renderWithProviders(<LoadingOverlay {...defaultProps} />);

      // TODO: Add input interaction tests
      // Example:
      // const input = screen.getByRole("textbox");
      // await user.type(input, "test");
      // expect(input).toHaveValue("test");
    });
  });

  // ============ Accessibility ============
  describe('Accessibility', () => {
    it('has no accessibility violations', async () => {
      // TODO: Add axe-core tests if available
      // const { container } = renderWithProviders(<LoadingOverlay {...defaultProps} />);
      // const results = await axe(container);
      // expect(results).toHaveNoViolations();
      expect(true).toBe(true);
    });

    it('has proper ARIA attributes', () => {
      renderWithProviders(<LoadingOverlay {...defaultProps} />);

      // TODO: Check for proper ARIA labels
      // Example:
      // expect(screen.getByRole("button")).toHaveAttribute("aria-label");
    });

    it('is keyboard navigable', async () => {
      const user = userEvent.setup();
      renderWithProviders(<LoadingOverlay {...defaultProps} />);

      // TODO: Test keyboard navigation
      // Example:
      // await user.tab();
      // expect(screen.getByRole("button")).toHaveFocus();
    });
  });
});

describe('LoadingPlaceholder', () => {
  // TODO: Add required props
  const defaultProps = {};

  // ============ Rendering ============
  describe('Rendering', () => {
    it('renders without crashing', () => {
      renderWithProviders(<LoadingPlaceholder {...defaultProps} />);
    });

    it('renders with default props', () => {
      const { container } = renderWithProviders(<LoadingPlaceholder {...defaultProps} />);
      expect(container.firstChild).toBeInTheDocument();
    });
  });

  // ============ Snapshot ============
  describe('Snapshot', () => {
    it('matches snapshot', () => {
      const { container } = renderWithProviders(<LoadingPlaceholder {...defaultProps} />);
      expect(container.firstChild).toMatchSnapshot();
    });
  });

  // ============ Props ============
  describe('Props', () => {
    it('applies custom className', () => {
      // TODO: Implement if component accepts className prop
      expect(true).toBe(true);
    });

    it('handles optional props correctly', () => {
      // TODO: Test optional prop combinations
      expect(true).toBe(true);
    });
  });

  // ============ User Interactions ============
  describe('User Interactions', () => {
    it('handles click events', async () => {
      const user = userEvent.setup();
      renderWithProviders(<LoadingPlaceholder {...defaultProps} />);

      // TODO: Add click interaction tests
      // Example:
      // const button = screen.getByRole("button");
      // await user.click(button);
      // expect(mockHandler).toHaveBeenCalled();
    });

    it('handles input changes', async () => {
      const user = userEvent.setup();
      renderWithProviders(<LoadingPlaceholder {...defaultProps} />);

      // TODO: Add input interaction tests
      // Example:
      // const input = screen.getByRole("textbox");
      // await user.type(input, "test");
      // expect(input).toHaveValue("test");
    });
  });

  // ============ Accessibility ============
  describe('Accessibility', () => {
    it('has no accessibility violations', async () => {
      // TODO: Add axe-core tests if available
      // const { container } = renderWithProviders(<LoadingPlaceholder {...defaultProps} />);
      // const results = await axe(container);
      // expect(results).toHaveNoViolations();
      expect(true).toBe(true);
    });

    it('has proper ARIA attributes', () => {
      renderWithProviders(<LoadingPlaceholder {...defaultProps} />);

      // TODO: Check for proper ARIA labels
      // Example:
      // expect(screen.getByRole("button")).toHaveAttribute("aria-label");
    });

    it('is keyboard navigable', async () => {
      const user = userEvent.setup();
      renderWithProviders(<LoadingPlaceholder {...defaultProps} />);

      // TODO: Test keyboard navigation
      // Example:
      // await user.tab();
      // expect(screen.getByRole("button")).toHaveFocus();
    });
  });
});
