// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingOverlay Snapshot matches snapshot 1`] = `
<div
  class="fixed inset-0 z-50 flex flex-col items-center justify-center bg-background/80 backdrop-blur-sm"
>
  <div
    aria-label="Loading"
    class="animate-spin rounded-full border-2 border-current border-t-transparent h-12 w-12 text-primary"
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </div>
  <p
    class="mt-4 text-sm text-muted-foreground"
  >
    Loading...
  </p>
</div>
`;

exports[`LoadingPlaceholder Snapshot matches snapshot 1`] = `
<div
  class="flex items-center justify-center rounded-lg bg-muted h-64"
>
  <div
    aria-label="Loading"
    class="animate-spin rounded-full border-2 border-current border-t-transparent h-8 w-8 text-muted-foreground"
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`Spinner Snapshot matches snapshot 1`] = `
<div
  aria-label="Loading"
  class="animate-spin rounded-full border-2 border-current border-t-transparent h-8 w-8"
  role="status"
>
  <span
    class="sr-only"
  >
    Loading...
  </span>
</div>
`;
